--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root{
   --primary: #efb6b2;
@@ -8,12 +8,16 @@
 
 /* base styles & title */
 body{
-  font-family: "Noto Serif";
+  font-family: "Roboto";
   color: var(--secondary);
 }
 .App{
   max-width: 960px;
   margin: 0 auto;
+}
+.title a:link, a:visited, a:hover, a:active {
+  color: var(--secondary);
+
 }
 .title h1{
   color: var(--primary);
@@ -53,7 +57,7 @@ label{
 }
 label:hover{
   background: var(--primary);
-  color: white;
+  color: black;
 }
 .output{
   height: 60px;
@@ -110,4 +114,8 @@ label:hover{
   margin: 60px auto;
   box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
   border: 3px solid white;
+}
+.flex-container {
+  display: flex;
+  flex-direction: column;
 }
